- 카카오 api를 활용한 검색 api 추가  - keyword history 저장 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,8 @@ spring:
     port: 6379
   session:
     store-type: REDIS
+
+map-search:
+  kakao:
+    host: dapi.kakao.com
+    api-key: 5bed545f676e30b9f98788c64d92bf8b
