- 결과 리스트 paginatio 완료 - 최근 검색어 뷰 구성 완료 - 키워드 랭킹 api 추가 완료

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   h2:
     console:
       enabled: true
@@ -23,3 +26,8 @@ map-search:
   kakao:
     host: dapi.kakao.com
     api-key: 5bed545f676e30b9f98788c64d92bf8b
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
