--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,17 @@ repositories {
 }
 
 dependencies {
-	testImplementation 'junit:junit:4.+'
+//	testImplementation 'junit:junit:4.+'
+//	testImplementation 'org.hamcrest:hamcrest-all:1.3'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-inline:2.28.2'
+	testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
+	testImplementation 'org.powermock:powermock-module-junit4-rule-agent:2.0.2'
+	testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.0'
+	testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 
 
