--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: local
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -6,28 +8,14 @@ spring:
     password: 11qqww22!!
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-  h2:
-    console:
-      enabled: true
+    open-in-view: false
   redis:
     host: localhost
     port: 6379
   session:
     store-type: REDIS
-  devtools:
-    livereload:
-      enabled: true
 
 map-search:
   kakao:
     host: dapi.kakao.com
     api-key: 5bed545f676e30b9f98788c64d92bf8b
-logging:
-  level:
-    org:
-      hibernate:
-        type: trace
