--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,4 +18,7 @@ spring:
 map-search:
   kakao:
     host: dapi.kakao.com
-    api-key: 5bed545f676e30b9f98788c64d92bf8b
+    api:
+      key: 5bed545f676e30b9f98788c64d92bf8b
+      local:
+        search: "/v2/local/search/keyword.json"
