--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ build/
 .idea_modules/
 
 ##########################
+## Gradle
+##########################
+.gradle/
+
+##########################
 ## Eclipse
 ##########################
 .metadata
