--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.session:spring-session-data-redis:2.1.7.RELEASE'
 	implementation 'it.ozimov:embedded-redis:0.7.2'
+	implementation 'org.redisson:redisson:3.11.1'
 }
